possible clipping fix

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 .main .hero-text-container {
   position: absolute;
   font-family: "brat";
-  padding-top: 3vh;
   top: 5vh;
   left: 5%;
   /* transform: rotateZ(-12deg); */
@@ -24,7 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 65vmax;
+  min-height: 85vmax;
 }
 
 main .hero-text-container > * {
@@ -34,6 +33,7 @@ main .hero-text-container > * {
 }
 
 .CAPTURE {
+  padding-top: 3vh;
   font-size: 8vw;
   letter-spacing: 1vw;
   /* transform-origin: center;
